--- a/app/views/static_pages/_logged.html.erb
+++ b/app/views/static_pages/_logged.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'shared/my_games_panels', locals: { collection: @home_collection } %>
+<%= render partial: 'panels_view/my_games_panels', locals: { collection: @home_collection } %>
 
 <script>
   $(".m-coll").removeClass('active')
