--- a/app/views/panels_view/_my_games_panels.html.erb
+++ b/app/views/panels_view/_my_games_panels.html.erb
@@ -1,41 +1,44 @@
 <script>
-function updateIcon(form_type, name, id) {
+function updatePlatformIcon(form_type, id) {
 
     var form = '#' + form_type + '-form-' + id;
-
-    var f_name = name == 'collection' ? name : 'game_platform';
-
-    var select_element = form + ' #' + f_name;
+    var select_element = form + ' #' + 'game_platform';
 
     $(select_element).on('input', function() {
         var value = $(select_element).val();
-        var icon = form + ' .' + name + '-icon';
+        var icon = form + ' .' + 'platform' + '-icon';
         if (value.length > 0) {
-            $(icon).attr('class', name + '-green');
+            $(icon).attr('class', 'platform' + '-green');
         } else {
-            icon = form + ' .' + name + '-green';
-            $(icon).attr('class', name + '-icon');
+            icon = form + ' .' + 'platform' + '-green';
+            $(icon).attr('class', 'platform' + '-icon');
         }
     });
 }
 
-function askPlatforms(form_type, id) {
+function activateForm(form_type, id) {
     var form = '#' + form_type + '-form-' + id;
     var select_element = form + ' #collection';
     var platform_element = form + ' #platform-option';
     var needs_platform = form + ' #game_needs_platform';
+    var action_element= form + ' #cp-mv';
 
     $(select_element).on('input', function() {
         var value = $(select_element).val();
-
-        var cv = value.length != 0 ? (value.split(",")[1] == 'true') : false;
+        var cv = value.length != 0 ? (value.split(",")[1] == 'true') : 'select';
 
         if (cv == true) {
+            $(action_element).show();
             $(platform_element).show();
             $(needs_platform).attr('value', 'true');
         } else if (cv == false) {
+            $(action_element).show();
             $(platform_element).hide();
             $(needs_platform).attr('value', 'false');
+        } else {
+            $(needs_platform).attr('value', 'false');
+            $(action_element).hide();
+            $(platform_element).hide();
         }
     });
 }
