--- a/app/views/panels_view/_my_games_panels.html.erb
+++ b/app/views/panels_view/_my_games_panels.html.erb
@@ -1,17 +1,16 @@
 <script>
 function updatePlatformIcon(form_type, id) {
-
     var form = '#' + form_type + '-form-' + id;
     var select_element = form + ' #' + 'game_platform';
 
     $(select_element).on('input', function() {
         var value = $(select_element).val();
-        var icon = form + ' .' + 'platform' + '-icon';
+        var icon = form + ' .platform-icon';
         if (value.length > 0) {
-            $(icon).attr('class', 'platform' + '-green');
+            $(icon).attr('class', 'platform-green');
         } else {
-            icon = form + ' .' + 'platform' + '-green';
-            $(icon).attr('class', 'platform' + '-icon');
+            icon = form + ' .platform-green';
+            $(icon).attr('class', 'platform-icon');
         }
     });
 }
@@ -84,6 +83,27 @@ function resetFormErrors(form, game_id) {
             $(element).html('');
         });
     }
+}
+
+function preselectPlatform(id, platform) {
+    var form = '#copy-form-' + id;
+    var element = form + " #game_platform option[value^='" + platform + ",']";
+    $(element).attr("selected","selected");
+    $(form + ' .platform-icon').attr('class', 'platform-green');
+}
+
+function changeButton(id) {
+    var form = '#copy-form-' + id;
+    var element = form + " #cp-mv input[type='radio']";
+    var button = form + " .add-button";
+    $(element).on('input', function() {
+        var selected = $(element + ":checked");
+        if (selected.length > 0) {
+            selected_val = selected.val();
+        }
+        b_name = eval(selected_val) ? 'Copy' : 'Move';
+        $(button).text(b_name);
+    });
 }
 </script>
 
