Convert svg icons rendered as partials to rendered using helper method.

--- a/app/views/cover_view/_cover_view.html.erb
+++ b/app/views/cover_view/_cover_view.html.erb
@@ -5,7 +5,7 @@
     <% if cover = get_game_cover(game) %>
       <div class="game-cover-effect" style="width: <%= cover[:width] %>px; height: <%= cover[:height] %>px" uk-toggle="target: #i-<%= game[:igdb_id] %>">
       <%= image_tag('', id: "gc-#{ game[:igdb_id] }", class: "game-cover #{ cover[:from_scrn] }", width: cover[:width], height: cover[:height], 'data-src' => cover[:url], alt: game[:name], 'draggable' => 'false', 'uk-img' => '') %>
-      <div class="spinner"><%= render 'svgs/loading' %></div>
+      <div class="spinner"><%= svg 'loading' %></div>
     <% else %>
       <div class="game-cover-effect" uk-toggle="target: #i-<%= game[:igdb_id] %>">
       <%= content_tag(:div, id: "gc-#{ game[:igdb_id] }", class: 'no-cover') do %>
